--- a/index.html
+++ b/index.html
@@ -1159,7 +1159,7 @@
                                 src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHg9IjAiIHk9IjAiIHZpZXdCb3g9IjAgMCA1MDAgNTAwIiB3aWR0aD0iNTAwIiBoZWlnaHQ9IjUwMCIgcHJlc2VydmVBc3BlY3RSYXRpbz0ibm9uZSI%2BPHJlY3QgZmlsbD0idHJhbnNwYXJlbnQiIHdpZHRoPSIxMDAlIiBoZWlnaHQ9IjEwMCUiLz48L3N2Zz4%3D"
                                 data-src="assets/dwin.gif" alt="" /></span></div>
                     <h1 id="text03">3D maps for you</h1>
-                    <p id="text04">The world arround us is 3D. So should be our maps. We are creating global 3D maps.
+                    <p id="text04">The world around us is 3D. So should be our maps. We are creating global 3D maps.
                         More like - Earth&#39;s (D)igital t(WIN).</p>
                     <ul id="buttons02" class="buttons">
                         <li><a href="https://maps-3d.herokuapp.com/demo/fd6ae1f331d64139856c0e11ff/"
