update demo link

--- a/index.html
+++ b/index.html
@@ -1162,7 +1162,7 @@
                     <p id="text04">The world around us is 3D. So should be our maps. We are creating global 3D maps.
                         More like - Earth&#39;s (D)igital t(WIN).</p>
                     <ul id="buttons02" class="buttons">
-                        <li><a href="https://maps-3d.herokuapp.com/demo/fd6ae1f331d64139856c0e11ff/"
+                        <li><a href="https://dwin3d.herokuapp.com/demo/fd6ae1f331d64139856c0e11ff/"
                                 class="button n01">Try it now!</a></li>
                         <li><a href="#contact" class="button n02">Contact Us</a></li>
                     </ul>
